--- a/indexv2.5.html
+++ b/indexv2.5.html
@@ -530,212 +530,179 @@ function mutateBrain(brain) {
     brainArray.push(newBrain)
 }
 
+function mergeBrains(brain1,brain2) {
+  nodes = brain1['nodes']
+  weights = []
+  for(p = 0; p < brain1['weights'].length; p++) {
+    weights.push([])
+    for(q = 0; q < brain1['weights'][p].length; q++) {
+      brainSelect = Math.round(Math.random())
+      if(brainSelect) {
+        weights[p].push(brain1['weights'][p][q])
+      }else{
+        weights[p].push(brain2['weights'][p][q])
+      }
+    }
+  }
+  delete brain1
+  delete brain2
+  let newBrain = new Brain(nodes,weights)
+  delete nodes
+  delete weights
+  mutateBrain(newBrain)
+}
+
 goat = 0
 highestScore = -1
 async function useBrains() {
     generation = 0
     while(true) {
-      r=0
-      c=0
-      curBoardPos = 0
-      createArray()
-      populateGrid()
-      createBoardConfig()
-      while(!checkGrid(playableGrid)) {
+      if(!(brainArray.length > popSize*2)) {
+        r=0
+        c=0
+        curBoardPos = 0
+        createArray()
+        populateGrid()
+        createBoardConfig()
+        while(!checkGrid(playableGrid)) {
 
-          let ratings = []
-          for(sB = 0; sB < brainArray.length; sB++) {
-              selectedbrain=brainArray[sB]
-              if(selectedbrain != 0) {
-                correct = 1
-                skips = 2
-                let brainRating = 0
-                while(correct) {
-                    await delay(0);
-                    if(r == 9) {
-                      c+=1
-                      r = 0
-                    }
-                    if(c == 9) {
-                      r = 0
-                      c = 0
-                      curBoardPos = 0
-                    }
-                    document.getElementById("curRow").innerText = r;
-                    document.getElementById("curCol").innerText = c;
-                    //r = Math.floor(Math.random()*9)
-                    //c = Math.floor(Math.random()*9)
-                    currentInput = 0
-                    for(h = 0; h < playableGrid.length; h++) {
-                      for(v = 0; v < playableGrid[h].length; v++) {
-                        if(h != r && v != r) {
-                          selectedbrain.setInput(currentInput,(1/9)*playableGrid[h][v])
-                          currentInput+=1
-                        }else{
-                          selectedbrain.setInput(currentInput,(1/9)*playableGrid[h][v])
-                          currentInput+=1
-                        }
+            let ratings = []
+            for(sB = 0; sB < brainArray.length; sB++) {
+                selectedbrain=brainArray[sB]
+                if(selectedbrain != 0) {
+                  correct = 1
+                  skips = 2
+                  var brainRating = 10
+                  while(correct) {
+                      await delay(0);
+                      if(r == 9) {
+                        c+=1
+                        r = 0
                       }
-                    }
-
-                    /*
-                    row = getRow(playableGrid,r)
-                    column = getColumn(playableGrid,c)
-                    square = getSquare(playableGrid,r,c)
-                    let currentInput = 0
-                    for(i of row) {
-                        if(i != grid[r][c]) {
-                          try {
-                            selectedbrain.setInput(currentInput, i);
-                          }catch{
-                            console.log(selectedbrain)
-                            //throw new Error("Something went badly wrong!");
-                          }
-                            currentInput++
-                        }else{
-                          try {
-                            selectedbrain.setInput(currentInput, -1);
-                          }catch{
-                            console.log(selectedbrain)
-                            //throw new Error("Something went badly wrong!");
-                          }
-                            currentInput++
-                        }
-                    }
-                    for(i of column) {
-                        if(i != grid[r][c]) {
-                            selectedbrain.setInput(currentInput, i);
-                            currentInput++
-                        }else{
-                            selectedbrain.setInput(currentInput,-1)
-                            currentInput++
-                        }
-                    }
-                    for(i of square) {
-                        if(i != grid[r][c]) {
-                            selectedbrain.setInput(currentInput, i);
-                            currentInput++
-                        }else{
-                            selectedbrain.setInput(currentInput,-1)
-                            currentInput++
-                        }
-                    }
-                    delete currentInput
-                    delete row
-                    delete column
-                    delete square*/
-                    selectedbrain.think()
-                    high = 0
-                    highestNode = 0
-                    secondHighest = 0
-                    for(cn = 0; cn < selectedbrain.nodes[3].length; cn++) {
-                      if(selectedbrain.nodes[3][cn] > high) {
-                        high = selectedbrain.nodes[3][cn]
-                        secondHighest = highestNode
-                        highestNode = cn
+                      if(c == 9) {
+                        r = 0
+                        c = 0
+                        curBoardPos = 0
                       }
-                    }
-                    if(highestNode != 9 || skips == 0) {
-                      chosenNode = 0
-                      if(highestNode == 9) {
-                        chosenNode = secondHighest
-                      }else{
-                        chosenNode = highestNode+1
-                      }
-                      if(grid[r][c] == chosenNode) {
-
-                          setTile(r,c,chosenNode)
-                          correct = 1
-                          let score = 1
-                          if(brainRating > 0) {
-                            brainRating=brainRating*2
+                      document.getElementById("curRow").innerText = r;
+                      document.getElementById("curCol").innerText = c;
+                      currentInput = 0
+                      for(h = 0; h < playableGrid.length; h++) {
+                        for(v = 0; v < playableGrid[h].length; v++) {
+                          if(h != r && v != c) {
+                            selectedbrain.setInput(currentInput,(1/9)*playableGrid[h][v])
+                            currentInput+=1
                           }else{
-                            brainRating=2
+                            selectedbrain.setInput(currentInput,(1/9)*playableGrid[h][v])
+                            currentInput+=1
                           }
-                          r+=1
-                          curBoardPos++
-                          document.getElementById("board").childNodes[curBoardPos-1].style.backgroundColor = 'white'
-                          if(curBoardPos != 81) {
-                            document.getElementById("board").childNodes[curBoardPos].style.backgroundColor = 'yellow'
-                          }
+                        }
+                      }
+                      selectedbrain.think()
+                      high = 0
+                      highestNode = 0
+                      secondHighest = 0
+                      for(cn = 0; cn < selectedbrain.nodes[3].length; cn++) {
+                        if(selectedbrain.nodes[3][cn] > high) {
+                          high = selectedbrain.nodes[3][cn]
+                          secondHighest = highestNode
+                          highestNode = cn
+                        }
+                      }
+                      if(highestNode != 9 || skips == 0) {
+                        chosenNode = 0
+                        if(highestNode == 9) {
+                          chosenNode = secondHighest
+                        }else{
+                          chosenNode = highestNode+1
+                        }
+                        if(grid[r][c] == chosenNode) {
+                            setTile(r,c,chosenNode)
+                            correct = 1
+                            brainRating+=1
+                            r+=1
+                            curBoardPos++
+                            if(curBoardPos > 0 && curBoardPos < 81) {
+                              document.getElementById("board").childNodes[curBoardPos-1].style.backgroundColor = 'white'
+                            }
+                            if(curBoardPos < 81) {
+                              document.getElementById("board").childNodes[curBoardPos].style.backgroundColor = 'yellow'
+                            }
+                        }else{
+                            rating = grid[r][c] - chosenNode
+                            if(rating < 0) {
+                                rating=rating*-1
+                            }
+                            brainRating-=(rating*0.1)
+                            correct = 0
+                        }
                       }else{
-                          rating = (grid[r][c] - chosenNode) * punMulti
-                          if(rating < 0) {
-                              rating=rating*-1
-                          }
-                          pen = selectedbrain.nodes[3][chosenNode]
-                          if(pen < 0) {
-                            pen=pen*-1
-                          }
-                          brainRating-=(rating+pen)
+                        skips-=1
+                        correct = 1
+                        r+=1
+                        brainRating-=2
+                        curBoardPos++
+                        if(curBoardPos > 0 && curBoardPos < 81) {
+                          document.getElementById("board").childNodes[curBoardPos-1].style.backgroundColor = 'white'
+                        }
+                        if(curBoardPos < 81) {
+                          document.getElementById("board").childNodes[curBoardPos].style.backgroundColor = 'yellow'
+                        }
+                        if(brainRating < 7) {
                           correct = 0
+                        }
                       }
-                    }else{
-                      skips-=1
-                      correct = 1
-                      r+=1
-                      brainRating-=1
-                      curBoardPos++
-                      document.getElementById("board").childNodes[curBoardPos-1].style.backgroundColor = 'white'
-                      if(curBoardPos != 81) {
-                        document.getElementById("board").childNodes[curBoardPos].style.backgroundColor = 'yellow'
-                      }
-                      if(brainRating < -2) {
-                        correct = 0
-                      }
-                    }
-                    //delete r
-                    //delete c
-                    /*if(brainRating > 10) {
-                        console.log("Brain in generation: " + generation + " at rating: " + brainRating)
-                    }*/
+                      //delete r
+                      //delete c
+                      /*if(brainRating > 10) {
+                          console.log("Brain in generation: " + generation + " at rating: " + brainRating)
+                      }*/
 
-                }
-                selectedbrain.rating = brainRating
-                document.getElementById("currentScore").innerText = Math.round(brainRating*100)/100;
-                ratings.push([selectedbrain,brainRating])
-            }
-          }
-          //console.log(ratings)
-          generation++
-          best = -2
-          brainArray.length = 0
-          bestBrain = 0
-          for(i = 0; i < ratings.length; i++) {
-              if(ratings[i][1] > best) {
-                  best = ratings[i][1]
-                  bestBrain = ratings[i][0]
-                  if(best > highestScore) {
-                      highestScore = best
-                      goat = bestBrain
-                      document.getElementById("highestScore").innerText = Math.round(best*100)/100;
                   }
+                  document.getElementById("currentScore").innerText = brainRating;
+                  ratings.push([selectedbrain,brainRating])
               }
+            }
+            //console.log(ratings)
+            generation++
+            best = -1
+            brainArray = []
+            bestBrain = 0
+            for(i = 0; i < ratings.length; i++) {
+                if(ratings[i][1] > best) {
+                    best = ratings[i][1]
+                    bestBrain = ratings[i][0]
+                    if(best > highestScore) {
+                        highestScore = best
+                        document.getElementById("highestScore").innerText = best;
+                    }
+                }
+            }
+            var sortedArray = ratings.sort((a,b) => b[1] - a[1])
+            if(sortedArray.length != 1) {
+              for(i = 0; i < (popSize/2)-5; i++) {
+                mergeBrains(sortedArray[i][0],sortedArray[i+1][0])
+              }
+              for(i = 0; i < (popSize/2)-5; i++) {
+                mergeBrains(sortedArray[0][0],sortedArray[1][0])
+              }
+              /*for(i = 0; i < 10; i++) {
+                //mutateBrain(goat)
+              }*/
+            }else{
+              for(i = 0; i < popSize; i++) {
+                  mutateBrain(bestBrain)
+              }
+            }
+            if(generation%10000 == 0) {
+                console.log("Generation: " + generation + " Rating: " + best + " Highest: " + highestScore)
+            }
+            document.getElementById("generation").innerText = generation;
+            document.getElementById("currentScore").innerText = sortedArray[0][1];
+            delete ratings
           }
-          var sortedArray = ratings.sort((a,b) => b[1] - a[1])
-
-          //brainArray.push(sortedArray[0][0])
-          if(sortedArray.length != 1) {
-            for(i = 0; i < (popSize/2)-5; i++) {
-                mutateBrain(sortedArray[i][0])
-            }
-            for(i = 0; i < (popSize/2)-5; i++) {
-              mutateBrain(sortedArray[0][0])
-            }
-            for(i = 0; i < 10; i++) {
-              mutateBrain(goat)
-            }
-          }else{
-            for(i = 0; i < popSize; i++) {
-                mutateBrain(bestBrain)
-            }
-          }
-          if(generation%10000 == 0) {
-              console.log("Generation: " + generation + " Rating: " + best + " Highest: " + highestScore)
-          }
-          document.getElementById("generation").innerText = generation;
-          //document.getElementById("currentScore").innerText = sortedArray[0][1];
-          delete ratings
+      }else{
+        console.log(brainArray.length)
       }
     }
 
