--- a/indexv2.5.html
+++ b/indexv2.5.html
@@ -67,7 +67,7 @@
           <p>Hidden Layer Node Count: <input type="number" id="hidLayerNodes" onchange="hidLayerNodes=parseInt(document.getElementById('hidLayerNodes').value)" value=20 min=1 max=100 step=1/></p>
           <p>Mutation Probability: <input type="number" id="mutProb" onchange="mutProb=parseInt(document.getElementById('mutProb').value)" value=2 min=0 max=10 step=1/></p>
           <p>Reward Multiplier: <input type="number" id="reMulti" onchange="reMulti=parseInt(document.getElementById('reMulti').value)" value=0.3 min=0 max=1 step=0.1 /></p>
-          <p>Punishment Multiplier: <input type="number" id="punMulti" onchange="punMulti=parseInt(document.getElementById('punMulti').value)" step=0.1 value=0.5 min=0.00 max=1 /></p>
+          <p>Punishment Multiplier: <input type="number" id="punMulti" onchange="punMulti=parseInt(document.getElementById('punMulti').value)" step=0.1 value=0.1 min=0.00 max=1 /></p>
 
           <button onclick="restart()">Create Brains</button>
           <p>Generation: <p id="generation"></p> Current Score: <p id="currentScore"></p> Highest Score: <p id="highestScore"></p></p>
@@ -81,8 +81,8 @@
     </center>
 </body>
 <script>
-reMulti = parseInt(document.getElementById('reMulti').value)
-punMulti = parseInt(document.getElementById('punMulti').value)
+reMulti = parseFloat(document.getElementById('reMulti').value)
+punMulti = parseFloat(document.getElementById('punMulti').value)
 mutProb = parseInt(document.getElementById('mutProb').value)
 popSize = parseInt(document.getElementById('popSize').value)
 hidLayers = parseInt(document.getElementById('hidLayers').value)
@@ -367,6 +367,7 @@ class Brain {
         this.nodes = nodes;
         this.weights = weights;
         this.rating = 0;
+        this.moves = [];
     }
     async think() {
         var start = Date.now();
@@ -589,11 +590,11 @@ async function useBrains() {
                       currentInput = 0
                       for(h = 0; h < playableGrid.length; h++) {
                         for(v = 0; v < playableGrid[h].length; v++) {
-                          if(h != r && v != c) {
+                          if(grid[r][c] != grid[h][v]) {
                             selectedbrain.setInput(currentInput,(1/9)*playableGrid[h][v])
                             currentInput+=1
                           }else{
-                            selectedbrain.setInput(currentInput,(1/9)*playableGrid[h][v])
+                            selectedbrain.setInput(currentInput,-1)
                             currentInput+=1
                           }
                         }
@@ -633,7 +634,7 @@ async function useBrains() {
                             if(rating < 0) {
                                 rating=rating*-1
                             }
-                            brainRating-=(rating*0.1)
+                            brainRating-=(rating*punMulti)
                             correct = 0
                         }
                       }else{
@@ -674,21 +675,22 @@ async function useBrains() {
                     bestBrain = ratings[i][0]
                     if(best > highestScore) {
                         highestScore = best
+                        goat = bestBrain
                         document.getElementById("highestScore").innerText = best;
                     }
                 }
             }
             var sortedArray = ratings.sort((a,b) => b[1] - a[1])
             if(sortedArray.length != 1) {
-              for(i = 0; i < (popSize/2)-5; i++) {
+              for(i = 0; i < (popSize/2)-1; i++) {
                 mergeBrains(sortedArray[i][0],sortedArray[i+1][0])
               }
-              for(i = 0; i < (popSize/2)-5; i++) {
+              for(i = 0; i < (popSize/2)-1; i++) {
                 mergeBrains(sortedArray[0][0],sortedArray[1][0])
               }
-              /*for(i = 0; i < 10; i++) {
-                //mutateBrain(goat)
-              }*/
+              for(i = 0; i < 2; i++) {
+                mergeBrains(goat,sortedArray[0][0])
+              }
             }else{
               for(i = 0; i < popSize; i++) {
                   mutateBrain(bestBrain)
