--- a/indexv2.5.html
+++ b/indexv2.5.html
@@ -401,7 +401,7 @@ class Brain {
                         console.log("-----")
                         console.log(i)
                         console.log(this.nodes[i])
-                        console.log(tanh(node))
+                        console.log(sigmoid(node))
                         debugger
                       }
                         this.nodes[i][n] = tanh(node)
@@ -590,7 +590,7 @@ async function useBrains() {
                       currentInput = 0
                       for(h = 0; h < playableGrid.length; h++) {
                         for(v = 0; v < playableGrid[h].length; v++) {
-                          if(grid[r][c] != grid[h][v]) {
+                          if(grid[r][c] != grid[h][v]) { //Fix, what happens when grid[r][c] == 0
                             selectedbrain.setInput(currentInput,(1/9)*playableGrid[h][v])
                             currentInput+=1
                           }else{
@@ -610,13 +610,14 @@ async function useBrains() {
                           highestNode = cn
                         }
                       }
-                      if(highestNode != 9 || skips == 0) {
+                      if(highestNode != 9 || (selectedbrain.moves[selectedbrain.moves.length-1] == "S" && selectedbrain.moves[selectedbrain.moves.length-2] == "S")) {
                         chosenNode = 0
                         if(highestNode == 9) {
                           chosenNode = secondHighest
                         }else{
                           chosenNode = highestNode+1
                         }
+                        selectedbrain.moves.push(chosenNode)
                         if(grid[r][c] == chosenNode) {
                             setTile(r,c,chosenNode)
                             correct = 1
@@ -641,7 +642,8 @@ async function useBrains() {
                         skips-=1
                         correct = 1
                         r+=1
-                        brainRating-=2
+                        selectedbrain.moves.push("S")
+                        brainRating-=1*punMulti
                         curBoardPos++
                         if(curBoardPos > 0 && curBoardPos < 81) {
                           document.getElementById("board").childNodes[curBoardPos-1].style.backgroundColor = 'white'
@@ -683,7 +685,7 @@ async function useBrains() {
             var sortedArray = ratings.sort((a,b) => b[1] - a[1])
             if(sortedArray.length != 1) {
               for(i = 0; i < (popSize/2)-1; i++) {
-                mergeBrains(sortedArray[i][0],sortedArray[i+1][0])
+                mergeBrains(sortedArray[0][0],sortedArray[i][0])
               }
               for(i = 0; i < (popSize/2)-1; i++) {
                 mergeBrains(sortedArray[0][0],sortedArray[1][0])
