--- a/indexv2.5.html
+++ b/indexv2.5.html
@@ -71,8 +71,9 @@
 
           <button onclick="restart()">Create Brains</button>
           <p>Generation: <p id="generation"></p> Current Score: <p id="currentScore"></p> Highest Score: <p id="highestScore"></p></p>
-          <p>Current Row: <p id="curRow"></p>
-          <p>Current Column: <p id="curCol"></p>
+          <p>Avg Score: <p id="avgScore"></p></p>
+          <p>Current Row: <p id="curRow"></p></p>
+          <p>Current Column: <p id="curCol"></p></p>
         </div>
         <div id="numberList">
 
@@ -95,6 +96,7 @@ function restart() {
   document.getElementById('generation').innerText = '0';
   document.getElementById('highestScore').innerText = '0';
   document.getElementById('currentScore').innerText = '0';
+  document.getElementById('avgScore').innerText = '0';
   document.getElementById('curRow').innerText = '0';
   document.getElementById('curCol').innerText = '0';
   createBrain();
@@ -553,6 +555,9 @@ function mergeBrains(brain1,brain2) {
   mutateBrain(newBrain)
 }
 
+
+scoreSum = 0
+scoreCount = 0
 goat = 0
 highestScore = -1
 async function useBrains() {
@@ -617,7 +622,7 @@ async function useBrains() {
                         }else{
                           chosenNode = highestNode+1
                         }
-                        selectedbrain.moves.push(chosenNode)
+                        selectedbrain.moves.push([chosenNode,grid[r][c],r,c])
                         if(grid[r][c] == chosenNode) {
                             setTile(r,c,chosenNode)
                             correct = 1
@@ -673,6 +678,8 @@ async function useBrains() {
             bestBrain = 0
             for(i = 0; i < ratings.length; i++) {
                 if(ratings[i][1] > best) {
+                    scoreSum+=ratings[i][1]
+                    scoreCount+=1
                     best = ratings[i][1]
                     bestBrain = ratings[i][0]
                     if(best > highestScore) {
@@ -698,11 +705,15 @@ async function useBrains() {
                   mutateBrain(bestBrain)
               }
             }
+
             if(generation%10000 == 0) {
                 console.log("Generation: " + generation + " Rating: " + best + " Highest: " + highestScore)
             }
             document.getElementById("generation").innerText = generation;
             document.getElementById("currentScore").innerText = sortedArray[0][1];
+            document.getElementById("avgScore").innerText = Math.round((scoreSum/scoreCount)*1000)/1000;
+            scoreSum = 0
+            scoreCount = 0
             delete ratings
           }
       }else{
